SERVER-20630 find command on mongod needs to wait until out of critical section