src/mongo/db/commands/find_cmd.cpp
@@ -234,13 +234,25 @@ public:
         }
         std::unique_ptr<CanonicalQuery> cq = std::move(statusWithCQ.getValue());
 
-        // If the received version is newer than the version cached in 'shardingState', then we have
-        // to refresh 'shardingState' from the config servers. We do this before acquiring locks so
-        // that we don't hold locks while waiting on the network.
         ShardingState* const shardingState = ShardingState::get(txn);
+
         if (OperationShardVersion::get(txn).hasShardVersion() && shardingState->enabled()) {
             ChunkVersion receivedVersion = OperationShardVersion::get(txn).getShardVersion(nss);
             ChunkVersion latestVersion;
+            // Wait for migration completion to get the correct chunk version.
+            const int maxTimeoutSec = 30;
+            int timeoutSec = cq->getParsed().getMaxTimeMS() / 1000;
+            if (!timeoutSec || timeoutSec > maxTimeoutSec) {
+                timeoutSec = maxTimeoutSec;
+            }
+
+            if (!shardingState->waitTillNotInCriticalSection(timeoutSec)) {
+                uasserted(ErrorCodes::LockTimeout, "Timeout while waiting for migration commit");
+            }
+
+            // If the received version is newer than the version cached in 'shardingState', then we
+            // have to refresh 'shardingState' from the config servers. We do this before acquiring
+            // locks so that we don't hold locks while waiting on the network.
             uassertStatusOK(shardingState->refreshMetadataIfNeeded(
                 txn, nss.ns(), receivedVersion, &latestVersion));
         }
